Corrected child component menu alignment

--- a/frontend/src/app/basic/basic-table/basic-table.component.scss
+++ b/frontend/src/app/basic/basic-table/basic-table.component.scss
@@ -2,6 +2,10 @@
   display: inline-block;
 }
 
+.separator {
+  display: inline-block;
+}
+
 table {
   width: 100%;
 }
